Convert PDF to Image using imagick

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
+        "ext-imagick": "*",
         "react/http": "^0.5@dev",
         "guzzlehttp/guzzle": "dev-master"
     },
