--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,11 +1,14 @@
 services:
     garant_file_preview_generator.remote_client:
         class: Garant\FilePreviewGeneratorBundle\Client\RemoteClient
+        arguments: ["@liip_imagine.filter.manager", "@liip_imagine.binary.loader.prototype.filesystem"]
         calls:
             - [setContainer, ["@service_container"]]
 
     garant_file_preview_generator.libreoffice_generator:
         class: Garant\FilePreviewGeneratorBundle\Generator\LibreOfficeGenerator
+        arguments: ["@liip_imagine.filter.manager", "@liip_imagine.binary.loader.prototype.filesystem"]
 
     garant_file_preview_generator.msoffice_generator:
           class: Garant\FilePreviewGeneratorBundle\Generator\MSOfficeGenerator
+          arguments: ["@liip_imagine.filter.manager", "@liip_imagine.binary.loader.prototype.filesystem"]
