--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "^5.3.9|^7.0",
         "ext-imagick": "*",
-        "react/http": "^0.5@dev",
+        "react/http": "^0.4",
         "liip/imagine-bundle": "dev-master",
         "guzzlehttp/guzzle": "dev-master",
         "symfony/framework-bundle": "~2.3|~3.0"
