--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,10 @@
         }
     ],
     "require": {
-        "php": "^5.3.9|^7.0",
         "ext-imagick": "*",
         "react/http": "^0.4",
         "liip/imagine-bundle": "dev-master",
-        "guzzlehttp/guzzle": "dev-master",
-        "symfony/framework-bundle": "~2.3|~3.0"
+        "guzzlehttp/guzzle": "dev-master"
     },
     "autoload": {
         "psr-4": { "Garant\\FilePreviewGeneratorBundle\\": "" }
