--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "ext-imagick": "*",
         "react/http": "^0.4",
         "liip/imagine-bundle": "^1.5",
-        "guzzlehttp/guzzle": "dev-master"
+        "guzzlehttp/guzzle": "^6.2"
     },
     "autoload": {
         "psr-4": { "Garant\\FilePreviewGeneratorBundle\\": "" }
