--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -8,7 +8,8 @@ parameters:
 services:
     garant_file_preview_generator.binary.loader.filesystem:
         class: '%garant_file_preview_generator.binary.loader.filesystem_class%'
-        arguments: ['@liip_imagine.mime_type_guesser', '@liip_imagine.extension_guesser', ~]
+        #@todo Fix the third argument
+        arguments: ['@liip_imagine.mime_type_guesser', '@liip_imagine.extension_guesser', '%kernel.root_dir%/../web']
 
     garant_file_preview_generator.remote_client:
         class: '%garant_file_preview_generator.remote_client.class%'
