--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -4,6 +4,7 @@ parameters:
     garant_file_preview_generator.libreoffice_generator.class: Garant\FilePreviewGeneratorBundle\Generator\LibreOfficeGenerator
     garant_file_preview_generator.msoffice_generator.class: Garant\FilePreviewGeneratorBundle\Generator\MSOfficeGenerator
     garant_file_preview_generator.binary.loader.filesystem_class: Garant\FilePreviewGeneratorBundle\Binary\Loader\FileSystemLoader
+    garant_file_preview_generator.supervisor_class: Garant\FilePreviewGeneratorBundle\Supervisor\Supervisor
 
 services:
     garant_file_preview_generator.binary.loader.filesystem:
@@ -22,8 +23,8 @@ services:
         arguments: ["@liip_imagine.filter.manager", "@garant_file_preview_generator.binary.loader.filesystem"]
 
     garant_file_preview_generator.msoffice_generator:
-          class: '%garant_file_preview_generator.msoffice_generator.class%'
-          arguments: ["@liip_imagine.filter.manager", "@garant_file_preview_generator.binary.loader.filesystem"]
+        class: '%garant_file_preview_generator.msoffice_generator.class%'
+        arguments: ["@liip_imagine.filter.manager", "@garant_file_preview_generator.binary.loader.filesystem"]
 
     garant_file_preview_generator.shm.predis:
           class: Garant\FilePreviewGeneratorBundle\SharedMemory\PredisAdapter
