--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,8 @@
     ],
     "require": {
         "ext-imagick": "*",
-        "react/http": "dev-master#cd15204bd15d106d7832c680e4fb0ca0ce2f5e30",
-        "liip/imagine-bundle": "^1.5",
-        "guzzlehttp/guzzle": "^3.6"
+        "react/http": "dev-master",
+        "liip/imagine-bundle": "^1.5"
     },
     "autoload": {
         "psr-4": { "Garant\\FilePreviewGeneratorBundle\\": "" }
