--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -21,10 +21,14 @@ services:
     garant_file_preview_generator.libreoffice_generator:
         class: '%garant_file_preview_generator.libreoffice_generator.class%'
         arguments: ["@liip_imagine.filter.manager", "@garant_file_preview_generator.binary.loader.filesystem"]
+        calls:
+            - [setLogger, ["@logger"]]
 
     garant_file_preview_generator.msoffice_generator:
         class: '%garant_file_preview_generator.msoffice_generator.class%'
         arguments: ["@liip_imagine.filter.manager", "@garant_file_preview_generator.binary.loader.filesystem"]
+        calls:
+            - [setLogger, ["@logger"]]
 
     garant_file_preview_generator.shm.predis:
           class: Garant\FilePreviewGeneratorBundle\SharedMemory\PredisAdapter
