--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
     ],
     "require": {
         "ext-imagick": "*",
+        "php": ">=7.1",
         "react/http": "dev-master",
-        "liip/imagine-bundle": "^1.5"
+        "liip/imagine-bundle": "^1.5",
+        "guzzle/http": "^3.9"
     },
     "autoload": {
         "psr-4": { "Garant\\FilePreviewGeneratorBundle\\": "" }
