--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "ext-imagick": "*",
         "php": ">=7.0",
         "react/http": "dev-master",
-        "liip/imagine-bundle": "^1.5",
+        "liip/imagine-bundle": "<1.9",
         "guzzle/http": "^3.9"
     },
     "autoload": {
